remove scalatest from dependency eviction tests