@@ -46,12 +46,9 @@ scriptedBufferLog := false
 
 scriptedLaunchOpts :=  Seq(
   "-Xmx1024M",
-  "-XX:MaxPermSize=256M",
   "-Dplugin.version=" + version.value
 )
 
-excludeDependencies ++= Seq(
-  ExclusionRule("org.scala-lang.modules", "scala-xml")
-)
+
 //self referencing so that dependencies can be monitored by Scala Steward
 org.typelevel.libraries.testDependencies(org.typelevel.libraries.libs.keys.toSeq:_*)
